[tool.poetry]
name = "chesscraft-ai"
version = "0.1.0"
description = ""
authors = ["Tanmaypatil123 <tanmaypatil3151@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
chess = "^1.10.0"
gymnasium = "^0.29.1"
stockfish = "^3.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
